tests/interpreter/pass/026-arrays-float.hyg
let n = 4;
let arr: array {float} = array(n, 3.0f);
assert (arrayElem(arr, 0) = arrayElem(arr, arrayLength(arr) - 1));

arrayElem(arr, 1) <- 1.0f + 2.3f;
assert(arrayElem(arr, 1) - arrayElem(arr, 0) - 0.3f < 0.00001f)
