tests/interpreter/fail/021-array-slice-invalid-parent.hyg
let arr1 = struct {length = 3; data = 4};
let arr2 = slice(arr1, 2, 6); ()
